# internal/routers/api/v1/tag.go
@@ -25,7 +25,7 @@ func (t Tag) Get(c *gin.Context) {}
 // @Param state query int false "狀態" Enums(0,1) default(1)
 // @Param page query int false "頁碼"
 // @Param page_size query int false "每頁數量"
-// @Success 200 {object} model.Tag "成功"
+// @Success 200 {object} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "請求錯誤"
 // @Failure 500 {object} errcode.Error "內部錯誤"
 // @Router /api/v1/tags [get]
@@ -36,7 +36,7 @@ func (t Tag) List(c *gin.Context) {}
 // @Param name query string false "標籤名稱" minlength(3) maxlength(100)
 // @Param state query int false "狀態" Enums(0,1) default(1)
 // @Param create_by body string true "建立者" minlength(3) maxlength(100)
-// @Success 200 {object} model.Tag "成功"
+// @Success 200 {object} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "請求錯誤"
 // @Failure 500 {object} errcode.Error "內部錯誤"
 // @Router /api/v1/tags [post]
@@ -48,7 +48,7 @@ func (t Tag) Create(c *gin.Context) {}
 // @Param name body string false "標籤名稱" minlength(3) maxlength(100)
 // @Param state body int false "狀態" Enums(0,1) default(1)
 // @Param modified_by body string true "修改者" minlength(3) maxlength(100)
-// @Success 200 {object} model.Tag "成功"
+// @Success 200 {object} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "請求錯誤"
 // @Failure 500 {object} errcode.Error "內部錯誤"
 // @Router /api/v1/tags/{id} [put]
@@ -57,7 +57,7 @@ func (t Tag) Update(c *gin.Context) {}
 // @Summary 刪除標籤
 // @Produce json
 // @Param id path int true "標籤ID"
-// @Success 200 {object} model.Tag "成功"
+// @Success 200 {object} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "請求錯誤"
 // @Failure 500 {object} errcode.Error "內部錯誤"
 // @Router /api/v1/tags/{id} [delete]
